@@ -45,9 +45,12 @@ It provides support for the encodings:
         UCS-2-INTERNAL, UCS-4-INTERNAL
 
 It can convert from any of these encodings to any other, through Unicode
-conversion. It has also some limited support for transliteration, i.e.
-when a character cannot be represented in the target character set, it can
-be approximated through one or several similarly looking characters.
+conversion.
+
+It has also some limited support for transliteration, i.e. when a character
+cannot be represented in the target character set, it can be approximated
+through one or several similarly looking characters. Transliteration is
+activated when "//TRANSLIT" is appended to the target encoding name.
 
 libiconv is for you if your application needs to support multiple character
 encodings, but that support lacks from your system.
