@@ -80,6 +80,11 @@ Full Unicode, in terms of \fBuint16_t\fP or \fBuint32_t\fP
 (with machine dependent endianness and alignment)
 UCS-2-INTERNAL, UCS-4-INTERNAL
 .PP
+When the string "//TRANSLIT" is appended to \fItocode\fP, transliteration
+is activated. This means that when a character cannot be represented in the
+target character set, it can be approximated through one or several
+similarly looking characters.
+.PP
 The resulting conversion descriptor can be used with \fBiconv\fP any number
 of times. It remains valid until deallocated using \fBiconv_close\fP.
 .PP
